# makemkv-auto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  fix-user-services.sh  migrate-to-user.sh  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml
scripts/: install.sh
src/makemkv_auto/: __init__.py  __main__.py  beta_key.py  cli.py  config.py  constants.py  detector.py  disc_db.py  exceptions.py  installer.py  logger.py  monitor.py  ripper.py
src/makemkv_auto/commands/: __init__.py  config.py  doctor.py  info.py  install.py  key.py  logs.py  rip.py  service.py  web.py
src/makemkv_auto/static/css/: style.css
src/makemkv_auto/systemd/: __init__.py  manager.py
src/makemkv_auto/utils/: notifications.py  path.py  system.py
src/makemkv_auto/web/: app.py  state.py
src/makemkv_auto/web/templates/: base.html  dashboard.html  error.html  logs.html  system.html
systemd/: makemkv-auto-key.service  makemkv-auto-key.timer  makemkv-auto-monitor.service  makemkv-auto-web.service
tests/: test_basic.py
